Add new custom annitations
I removed some exceptions , and added new custom annotations , and this way if there are validation errors of several fields , all of them will be displayed..